--- a/test_web/app/static/css/cities.css
+++ b/test_web/app/static/css/cities.css
@@ -1,5 +1,7 @@
 body {padding-top : 60px}
-#keywords{width: 300px}
-#like{width: 300px}
-#country{width: 300px}
 #user_inputs{width:60%;margin-left:20%}
+#outputs{width:60%;margin-left:20%}
+.form-horizontal .control-label{padding-top:0px}
+#ex1Slider .slider-selection {
+	background: #BABABA;
+}
