--- a/test_web/app/templates/cities.html
+++ b/test_web/app/templates/cities.html
@@ -12,116 +12,35 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap-slider.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/starter-template.css" rel="stylesheet">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
     <link href="../static/css/cities.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+    <script type='text/javascript' src="http://modernizr.com/downloads/modernizr-latest.js"></script> 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="../static/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap-slider.js"></script>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../static/js/ie-emulation-modes-warning.js"></script>
+    <!--<script src="../../static/js/ie-emulation-modes-warning.js"></script>-->
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../static/js/ie10-viewport-bug-workaround.js"></script>
+    <!--<script src="../../static/js/ie10-viewport-bug-workaround.js"></script>-->
 
+    <!--<script src="http://fgnass.github.io/spin.js/spin.js"></script>-->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+ 
 
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          
-	<a class="navbar-brand" href="#">[InsertHere]</a>
-
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-	<h1 class="text-center title">[Insert Name]</h1>
-
-	<div id="user_inputs" class="form-horizontal well col-sm-8" role="form">
-	  	<div class="form-group">
-    			<label for="keywords" class="col-sm-2 control-label">Your Interests</label>
-    			<div class="col-sm-10">
- 				<input type="text" class="typeahead form-control col-md-4" id="keywords" placeholder="e.g., beach, hiking, bar"/>
-    			</div>
-  		</div>
-
-  		<div class="form-group">
-    			<label for="like" class="col-sm-2 control-label">Favorite Cities</label>
-    			<div class="col-sm-10">
-				<input type="text" class="typeahead form-control col-md-4" id="like" placeholder="e.g., New York City, Prague"/>
-    			</div>
-  		</div>
-
-  		<div class="form-group">
-    			<label for="country" class="col-sm-2 control-label">Destination Region(s)</label>
-    			<div class="col-sm-10">
-  				<input type="text" class="typeahead form-control col-md-4" id="country" placeholder="e.g., New York, Europe"/>
-    			</div>
-  		</div>
- 		<center>
-  			<button class="btn btn-primary" id="submit">Discover Cities!</button>
- 		</center>
-  	</div>
-    </div>
-
-<div id="outputs" class="well col-sm-8">
-
-            <div id="size_slider" class="slider slider-horizontal" style="width:140px; margin:auto">
-		<div class="slider-track">
-              		<div class="slider-selection" style="left: 0%; width: 80%;"></div>
-	    		<div class="slider-handle round" style="left: 80%;"></div>
-			<div class="slider-handle round hide" style="left: 0%;"></div>
-	    	</div>
-	    	<div class="tooltip top" style="top: -40px; left: 65px;">
-			<div class="tooltip-arrow">
-			</div>
-	    		<div class="tooltip-inner">Current value: 8
-			</div>
-		</div>
-	    </div>
-
-<table id = "ranklist" class="table table-hover">
-</table>
-
-</div>
-
-    	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	
-    	<script src="../static/js/bootstrap.min.js"></script>
-
-
-    </div><!-- /.container -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap-slider.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-    <script src="http://fgnass.github.io/spin.js/spin.js"></script>
     <script>  
 
 	//var key = document.getElementById("keywords").value;
@@ -154,17 +73,17 @@
 	  left: '50%' // Left position relative to parent
 	};
 
-
-        $("#outputs").hide();
-        $("#ranklist").hide();
-	$("#size_slider").slider()
+        //$("#size_slider").hide();
+        //$("#ranklist").hide();
+        //$("#outputs").hide();
 
 	$(document).ready(function() {
-		$("#submit").click(function() {
+
+	 		$("#submit").click(function() {
 
                         //get keyword from user input
 			var target = document.getElementById('submit');
-			var spinner = new Spinner(opts).spin(target);
+			//var spinner = new Spinner(opts).spin(target);
 
                         var keywords = $("#keywords").val();
                         var country = $("#country").val();
@@ -176,15 +95,96 @@
                         //send keyword to server via ajax get request
 			$.get("/rank", {keywords : keywords, country : country, like : like}, function( data ) {
 				// data is response from server
-        			$("#outputs").show();
+        			$("#outputs").removeClass("hide");
 				$("#ranklist").replaceWith(data);
-				spinner.stop()
+				//spinner.stop()
+				$("#size_slider").removeClass("hide");
+			   	$('#size_slider').slider({
+	          				formater: function(value) {
+	            				return 'Current value: ' + value;
+	          				}
+	        });
+	
+
+
 			});
                         
 	        });
 	});
     </script>
 
+
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          
+	  <a class="navbar-brand" href="#">[InsertHere]</a>
+
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+	<div id="user_inputs" class="form-horizontal well col-sm-8" role="form">
+	  	<div class="form-group">
+    			<label for="keywords" class="col-sm-2 control-label">Your Interests</label>
+    			<div class="col-sm-10">
+ 				<input type="text" class="typeahead form-control col-md-4" id="keywords" placeholder="e.g., beach, hiking, bar"/>
+    			</div>
+  		</div>
+
+  		<div class="form-group">
+    			<label for="like" class="col-sm-2 control-label">Favorite Cities</label>
+    			<div class="col-sm-10">
+				<input type="text" class="typeahead form-control col-md-4" id="like" placeholder="e.g., New York City, Prague"/>
+    			</div>
+  		</div>
+
+  		<div class="form-group">
+    			<label for="country" class="col-sm-2 control-label">Destination Region(s)</label>
+    			<div class="col-sm-10">
+  				<input type="text" class="typeahead form-control col-md-4" id="country" placeholder="e.g., New York, Europe"/>
+    			</div>
+  		</div>
+ 		<center>
+  			<button class="btn btn-primary" id="submit">Discover Cities!</button>
+ 		</center>
+  	</div>
+    </div>
+
+    <div id="outputs" class="well col-sm-8 hide">
+
+<div id="my_slider" style="width:350px;margin:auto">
+<b>Smaller Cities    </b>
+		<input type="text" class="span2 hide" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[0,100]" id="size_slider" > 
+<b>   Larger Cities</b>
+</div>
+
+
+                <br><br>
+
+                <table id = "ranklist" class="table table-hover">
+                </table>
+    </div>
+
+
+    </div><!-- /.container -->
   </body>
 </html>
 
